<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SaveDataActivity" >

    <Button
        android:id="@+id/btnStart"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStop"
        android:layout_alignLeft="@+id/btnStop"
        android:layout_alignRight="@+id/svText"
        android:onClick="onClickStart"
        android:text="@string/savedataBtnStart" />

    <ScrollView
        android:id="@+id/svText"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnStart"
        android:layout_below="@+id/movile"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvSerial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnStop"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/svText"
        android:onClick="onClickStop"
        android:text="@string/savedataBtnStop" />

    <ImageButton
        android:id="@+id/iBtnMobile"
        style="@style/HomeUtilsMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/stringDescriptMobile"
        android:duplicateParentState="true"
        android:src="@drawable/disconnected"
        tools:context=".SaveDataActivity" />

    <TextView
        android:id="@+id/movile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iBtnMobile"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/stringMobile"
        android:textStyle="bold"
        tools:context=".SaveDataActivity" />

</RelativeLayout>